all pages completed

--- a/tex-for-print/071-150/071-150.tex
+++ b/tex-for-print/071-150/071-150.tex
@@ -7127,7 +7127,7 @@ parxtiVyateV tathA ceYkasathxlaM liMgAMgaBeVdataH ||
 
 \begin{entry}
 \word{EkasAra}
-\meaning{\arthanonum{\ullekha{dashasAra navasAra aSaTxsAra  paMcasAra catusAsxra EkasAra, iMtivanatigaLeda mahAmahimana nilavu liMgadalilx saMpUNaR, jaMgamadalilx atisahaja, parxsAdadalilx tadagxta iMtu savARMgadalilx saMpUNaRnAda nijeYkayxna nilavu sujAcnxna, sujAcnxna\-siMhAsanada meVleyidudx nishicxMtanAgi ipupxdu, kalideVvayayx (savasaM. 8; maDimA. 639-238); EkasAra iMtivanatigaLedu mahAmahimana nilavu liMgadalilx saMpUNaR (padagoV. 13-173);}}
+\meaning{\arthanonum{\ullekha{dashasAra navasAra aSaTxsAra  paMcasAra catusAsxra EkasAra, iMtivanatigaLeda mahAmahimana nilavu liMgadalilx saMpUNaR, jaMgamadalilx atisahaja, parxsAdadalilx tadagxta iMtu savARMgadalilx saMpUNaRnAda nijeYkayxna nilavu sujAcnxna, sujAcnxna\-siMhAsanada meVleyidudx nishicxMtanAgi ipupxdu, kalideVvayayx (savasaM. 8; maDimA. 639-238); EkasAra iMtivanatigaLedu mahAmahimana nilavu liMgadalilx saMpUNaR (padagoV. 13-173);}}}
 \end{entry}
 
 \begin{entry}
@@ -7322,32 +7322,32 @@ tadiMdarxdeYvataM porxVkatxM sadA swBAgayxvadhaRnamf ||
 \newmeaning{\artha{jAcnxnAcAra : kirxyAcAradiMda deYhika matutx mAnasika shudidhx\-yanunx paDeda naMtara sAdhakanu jAcnxnavanunx paDeyalu parxya\-tinxsa\-beVku. I parxyatanxvu jAcnxnAcAravenisikoLuLxtatxde. ida\-ralilx muKayxvAduveMdare : guruhiriyaralilx ahaMkAradiMda vatiRsabAradu; kuMdu-niMde, hAsayx-roVSagaLanunx vajiRsa\-beVku. pAtakara dashaRna, sapxshaRna, sahaBoVjana, sahavAsavanunx vajiRsa\-beVku. vacanagaLalilx heVLiruvaMte naDedukoLaLxbeVku.}}
 \smallskip
 \newmeaning{\artha{BAvAcAra : BAvAcAraveMdare namamx BAvavanunx (aMta\-raMga) nAveV pariVkeSx mADikoLuLxvudu. tanu vikAradiMda uMTAda kAma, korxVdha, loVBa, moVha, mada, mAtasxyaRgaLanunx vajiRsabeVku. BavijiVvanavanunx biDabeVku;\break yAvudu oLeLxyadu, yAvudu keTaTxdu eMbudanunx nAveV  savxMta viveVcaneyiMda nidhaRrisi, duguRNava tayxjisi, sadugxNava hiDidu, biDadipupxdeV BAvAcAra.}}
-\smallskip %%%% 148 prathibha
-\newmeaning{\artha{satAyxcAra : satAyxcAraveMdare, satayxvacana. atAyxseyiMda husiyanuDiyade, satayxvanenxV nuDiyabeVkeMbudu; nuDida meVle, adaraMte naDeyabeVkeMbudu; vacana koTaTxmeVle vacanakekx tapapxdiruvudu satAyxcAravenisikoLuLxtatxde.}}
+\smallskip 
+\newmeaning{\artha{satAyxcAra : satAyxcAraveMdare, satayxvacana. atAyxseyiMda husiya nuDiyade, satayxvanenxV nuDiyabeVkeMbudu; nuDida meVle, adaraMte naDeyabeVkeMbudu; vacana koTaTx meVle vacanakekx tapapxdiruvudu satAyxcAravenisikoLuLxtatxde.}}
 \smallskip
 \newmeaning{\artha{nitAyxcAra : kAmana bAdhegoLagAgi aneYtikavAgi vatiRsade, maDi meYlige muMtAdavugaLanunx Acarisade, baMdudelalxvU parxsAdaveMdu tiLidu, A parxsAdaBoVgadalilx loVlupatxnAgiruvudeV nitAyxcAra.}}
 \smallskip
 \newmeaning{\artha{dhamARcAra : yAvudeV parisithxtiyalilx dashavidha pAdoVdakada AcaraNe, EkAdasha parxsAdada AcaraNe matutx mUvatAtxru parxNavagaLa AcaraNe ivugaLanunx dhamARcAra oLagoLuLxtatxde.}}
 \smallskip
 \newmeaning{\arthanonum{idelalxvanUnx samathaR guruviniMda tiLidukoMDu adaraMte AcarisuvudeV savARcArasaMpatutx eMdu cenanxbasavaNaNxnavaru niNaRyisidAdxre. (va.pa.koV. 98-100)}
-\ullekha{ayAyx, shirxVguru karuNisikoTaTx liMga jaMgamavalalxde anayxdeYvaMgaLa terxYkaraNadalilx aciRsadipuRde liMgAcAraveMbenayAyx iMtiV EkAdashavamaRva gurukaqpAmuKadiMdaridu AcArave aMga mana pArxNa BAvaMgaLAgi ihaparava miVri piMDAdi jAcnxnashUnAyxMtavAda EkoVtatxramAgaRdailx niMdu bayaloLage bacacxbariya nivaRyala sAdhisuvude savARcAra saMpatitxnAcArada nilukaDe noVDA (savasaM. 3; cenanxba. 930-293).}}
+\ullekha{ayAyx, shirxVguru karuNisikoTaTx liMga jaMgamavalalxde, anayxdeYvaMgaLa terxYkaraNadalilx aciRsadipuRde liMgAcAraveMbenayAyx... iMtiV EkAdashavamaRva gurukaqpAmuKadiMdaridu, AcArave aMga mana pArxNa BAvaMgaLAgi, ihaparava miVri, piMDAdi jAcnxnashUnAyxMtavAda EkoVtatxramAgaRdalilxMdu, bayaloLage bacacxbariya nivaRyala sAdhisuvude savARcAra saMpatitxnAcArada nilukaDe noVDA (savasaM. 3; cenanxba. 930-293).}}
 \newmeaning{\ni{EkAdashavamARNi - EkAdasha ca tAni vamARNi EkAdashavamARNi}}
 \end{entry}
 
 \begin{entry}
-\word{EkAdashavidha apaRNe (EkAdashavidha parxsAda)}
-\meaning{\arthanonum{para\-shivanu namamxnUnx namagAgi parxpaMcavanUnx saqSiTxsidudakAkxgi nAvu toVrisabeVkAda kaqtajacnxteyeV Bakitx. \hbox{namamx} iMdirxyagaLAgali karaNagaLAgali, deVhavAgali, namamxvalalx, avelalx nAvu parashivaniMda paDeda sAla Atanige nAvu BakitxyiMda avelalxvanUnx iMdirxyAdhikaraNagaLanunx mAnasikavAgi hiMdirugisa\-beVku. idanenxV apaRNe enunxtetxVve. parashivanige apiRsi, anaMtara avugaLanunx upayoVgisuvudariMda avu parxsAdavAgutatxve. hiVge tiLiyuvavana deVhavu parxsAdakAya. vacanakArara parxkAra nAvu hanonxMdu riVtiyalilx parxsAdavanAnxgi mADikoLaLxbahudu. aveMdare :}}
+\word{EkAdashavidha parxsAda}
+\meaning{\arthanonum{para\-shivanu namamxnUnx namagAgi parxpaMcavanUnx saqSiTxsidudakAkxgi nAvu toVrisabeVkAda kaqtajacnxteyeV Bakitx. \hbox{namamx} iMdirxyagaLAgali karaNagaLAgali, deVhavAgali, namamxvalalx, avelalx nAvu parashivaniMda paDeda sAla. Atanige nAvu BakitxyiMda avelalxvanUnx iMdirxyAdhikaraNagaLanunx mAnasikavAgi hiMdirugisa\-beVku. idanenxV apaRNe enunxtetxVve. parashivanige apiRsi, anaMtara avugaLanunx upayoVgisuvudariMda avu parxsAdavAgutatxve. hiVge tiLiyuvavana deVhavu parxsAdakAya. vacanakArara parxkAra nAvu hanonxMdu riVtiyalilx parxsAdavanAnxgi mADikoLaLxbahudu. aveMdare :}}
 \newmeaning{\artha{namamx manasasxnunx parashivanige apiRsuvudu.}}
-\newmeaning{\artha{parasitxrXV, paradhana, kaLaLxtana, kolulxvudu, muMtAda aneYtika kAyaRgaLanunx mADuvudilalx eMba namamx daqDha nidhARravanunx apiRsuvudu.}}
+\newmeaning{\artha{parasitxrXV gamana, paradhana apaharaNa, kole, kolulxvudu, muMtAda aneYtika kAyaRgaLanunx mADuvudilalx eMba namamx daqDha nidhARravanunx apiRsuvudu.}}
 \newmeaning{\artha{namamx samAdhAnavanunx apiRsuvudu.}}
-\newmeaning{\artha{yAvudeV viSayagaLige AsepaDada niviRSayi budidhxyanunx apiRsuvudu.}}
-\newmeaning{\artha{namamx iMdirxyagaLeMba aidu muKa (paMcavakarx)gaLanunx apiRsuvudu.}}
+\newmeaning{\artha{yAvudeV viSayagaLige AsepaDada niviRSayi budidhxya apiRsuvudu.}}
+\newmeaning{\artha{namamx iMdirxyagaLeMba aidu muKa (paMcavakarx) gaLanunx apiRsuvudu.}}
 \newmeaning{\artha{elalx rUpagaLanunx apiRsi nirUpanAguvudu.}}
 \newmeaning{\artha{AtamxnanenxV apiRsuvudu.}}
 \newmeaning{\artha{marevanunx apiRsi jAcnxnavanunx paDeyuvudu.}}
-\newmeaning{\artha{sahasarxdaLa padamx (barxhamxraMdharx)dalilxruva taqpitxyanunx apiRsuvudu.}}
-\newmeaning{\artha{suSamAnxnALadiMda osaruva amaqtavanunx apiRsuvudu.}}
-\newmeaning{\artha{tAnAreMbudanunx maretu, tananxnenxV apiRsikoLuLxvudu.} \ullekha{inUnx EkAdasha parxsAda; parxthamadalilx mahAdeVvaMge manavapiRta, divxtiVyadalilx maheVshavxraMge viVrApiRta, taqtiVyadalilx shaMkaraMge samAdhAnavapiRta, catuthaRdalilx niviRSayApiRta, paMcamadalilx paMcavasAtxrXpiRta, SaSaThxdalilx naSaTxrUpAgi nirUpApiRta, sapatxmadalilx AtAmxpiRta, aSaTxmadalilx tananx maredu mahASiRta, navamadalilx nishUyxnAyxpiRta, dashamadalilx mahApiRta. EkAdashadalilx EkaparxsAda noVDahoVdare tananxnuMgitatxyAyx (savasaM. 3; cenanxba. 1416-507).}}
+\newmeaning{\artha{sahasarxdaLa padamx (barxhamxraMdharx) dalilxruva taqpitxyanunx apiRsuvudu.}}
+\newmeaning{\artha{suSumAnxnALadiMda osaruva amaqtavanunx apiRsuvudu.}}
+\newmeaning{\artha{tAnAreMbudanunx maretu, tananxnenxV apiRsikoLuLxvudu.} \ullekha{inUnx EkAdasha parxsAda; parxthamadalilx mahAdeVvaMge manavapiRta, divxtiVyadalilx maheVshavxraMge viVrApiRta, taqtiVyadalilx shaMkaraMge samAdhAnavapiRta, catuthaRdalilx niviRSayApiRta, paMcamadalilx paMcavasAtxrXpiRta, SaSaThxmadalilx naSaTx rUpAgi nirUpApiRta, sapatxmadalilx AtAmxpiRta, aSaTxmadalilx tananx mareda marahApiRta, navamadalilx asamasahasatxnALadiMda taqpAtxyXpiRta, dashamadalilx citatxsuyidhAniyAgi saniSumAnxvALadiMda amaqtApiRta (savasaM. 3; cenanxba. 1362-482).}}
 \end{entry}
 
 \begin{entry}
@@ -7358,8 +7358,9 @@ tadiMdarxdeYvataM porxVkatxM sadA swBAgayxvadhaRnamf ||
 
 \begin{entry}
 \word{EkeVMdirxya sucitatx}
-\meaning{\arthanonum{sAdhakanige aidu iMdirxyagaLidadxrU, citatxvanunx, sucitatxnAgimADikoMDu, ade iMdirxyadiMda yAvA\-galU shivadhAyxna mADutitxruvudu.}
-\ullekha{kAyakekx soVMku suKa, \hbox{jihevxge} madhura suKa, bahuBeVdavaM tiLidu, EkeVMdirxya sucitatxnAgi idadxvaMge kirxV jAcnxna samapaRNa ENAMkadhara soVmeVshavxra\-liMgakekx (savasaM. 8; bibibxbA. 298-120).}}
+\src{va}
+\meaning{\arthanonum{sAdhakanige aidu iMdirxyagaLidadxrU, citatxvanunx, sucitatxnAgi mADikoMDu, ade iMdirxyadiMda yAvA\-galU shivadhAyxna mADutitxruvudu.}
+\ullekha{kAyakekx soVMku suKa... \hbox{jihevxge} madhura suKa, bahuBeVdavaM tiLidu, EkeVMdirxya sucitatxnAgi idadxvaMge kirxV jAcnxna samapaRNa ENAMkadhara soVmeVshavxra\-liMgakekx (savasaM. 8; bibibxbA. 298-120).}}
 \newmeaning{\ni{EkeVMdirxyasucitatxM - EkeVMdirxyaM ca tatf sucitatxM ca EkeVMdirxyasucitatxM}}
 \end{entry}
 %\ullekha{raseVMdirxya gaMdheVMdirxya rUpeVMdirxya... matetx EkeVMdirxyaveMdu saMdhisi apiRsuva pariyinenxMto... (savasaM. 7; Dakekxbo. 964-292); kirxV shudadhxteyAdalilx BAva shudadhxvAgipupxdu... BAvashudadhxvAgipapxlilx saveRVdirxyaMgaLu EkeVMdirxyavAgi... (savasaM. 7; tururA. 1012-308); 
@@ -7367,13 +7368,15 @@ tadiMdarxdeYvataM porxVkatxM sadA swBAgayxvadhaRnamf ||
 
 \begin{entry}
 \word{EkeYka liMgAnusaMdhAna}
+\src{kA}
 %\meaning{\arthanonum{EkeYka liMgAnusaMdhAni}}
 %\newmeaning{\artha{adivxtiVyavAda liMgadoDane oDevereda (oMdAguva) saMdhAnavanunxLaLxvanu.}}
-\meaning{\arthanonum{adivxtiVyavAda aikayxsathxladalilx liMgadoDane oMdAguva neleyalilxruvavanu; liMgeYkayx saMtoVSakekx IDAdavanu-A mahAnavamiya saMdaBaR kAyadxvanu.}}
+%; liMgeYkayx saMtoVSakekx IDAdavanu-A mahAnavamiya saMdaBaR kAyadxvanu
+\meaning{\arthanonum{adivxtiVyavAda aikayxsathxladalilx liMgadoDane oMdAguva neleyalilxruvavanu.}}
 \smallskip
 \begin{shl}
-nirata nimaRla citatxvaDediVshavxradhAyxni hara shAMtaneVkeYka liMgAnu saMdhAniBarita para mAnaMda moVkaSx saMvadhAni
-viVrasheYvABimAni arivikAra guNaMgaLaMTada samAdhAni sharaNa saninxhita sathxlada sahaja sumAmxni karuNe madugxru shivajAcnxni basaveVshavxrana caraNakeBivaMdisuvenu||  (BibesaM. 1-2-2)
+nirata nimaRla citatxvaDediVshavxradhAyxni hara shAMtaneVkeYka liMgAnu saMdhAni Barita paramAnaMda moVkaSx saMvadhAni
+viVrasheYvABimAni arivikAra guNaMgaLaMTada samAdhAni sharaNa saninxhita sathxlada sahaja sumAmxni karuNe madugxru shivajAcnxni basaveVshavxrana caraNakaBivaMdisuvenu||  (BibesaM. 1-2-2)
 \end{shl}
 \medskip
 \newmeaning{\ni{EkeYkaliMgAnusaMdhAnaM - EkeYkasayx liMgasayx anusaMdhAnaM EkeYkaliMgAnusaMdhAnaM}}
@@ -7381,7 +7384,7 @@ viVrasheYvABimAni arivikAra guNaMgaLaMTada samAdhAni sharaNa saninxhita sathxlad
 
 \begin{entry}
 \word{EkoVtatxrashatasathxla}
-\meaning{\arthanonum{viVrasheYva sidAdhxMta parxtipAdaka 101 sathxlagaLu.
+\meaning{\arthanonum{viVrasheYva sidAdhxMtavanunx parxtipAdisuva 101 sathxlagaLu.
 piMDasathxladiMda sahaBoVjanasathxladavaregina nalavatutx nAlukx aMgasathxlagaLu matutx
 diVkASxgurusathxladiMda jAcnxna\-shUnayxsathxladavaregina aivatetxVLu liMgasathxlagaLu seVri 101
 sathxlagaLAgutatxve.}}
@@ -7392,9 +7395,9 @@ piMDAdijAcnxnashUnAyxMtameVkoVtatxrashatasathxlamf | (kirx.sA., BA-1, pu. 11)
 \end{shl}
 %\newmeaning{\arthanonum{idaralilx Bakatxna AcaraNegaLige saMbaMdhisidaMte nalavatutxnAlukx aMgasathxlagaLu matutx aMtha AcaraNegaLiMduMTAguva pariNAmagaLanunx tiLisuva aivatetxVLu liMgasathxlagaLu ive. aMgasathxlagaLalilx Bakatx, maheVshavxra, parxsAdi, pArxNaliMgi, sharaNa, aikayx eMba Aru muKayx viBAgagaLU liMgasathxlagaLalilx AcAraliMga, guruliMga, shivaliMga, jaMgamaliMga, parxsAdaliMga, mahAliMga eMba Aru muKayx viBAgagaLU ive. avugaLa vivara I riVti ide: aMgasathxlagaLu 44- 1. Bakatxsathxla:- idaralilx piMDasathxla, piMDajAcnxnasathxla, saMsAraheVyasathxla, gurukAruNayxsathxla, liMgadhAraNasathxla, viBUtisathxla, rudArxkaSxdhAraNasathxla, paMcAkaSxriVjapasathxla, Bakatxsathxla, guruliMgAcaRna sarUpoVBayasathxla, guruliMgajaMgama tirxvidhasaMpatutxsathxla, catuviRdhasArAyasathxla. upAdhimATasathxla, nirupAdhimATasathxla, sahajamATasathxla -eMba hadineYdu sathxlagaLu; 2. maheVshavxra sathxla:- idaralilx mAheVshavxraparxshaMsAsathxla, liMganiSAThxsathxla, pUvARsharxyanirasanasathxla, vAgadevxYtanirasanasathxla, AhAvxnanirasanasathxla, aSaTxtanumUtiRnirasanasathxla, savaRgatanirasanasathxla, shivajaganamxyasathxla, BakatxdeVhikasathxla - eMba oMbatutx sathxlagaLu; 3. parxsAdisathxla:- parxsAdisathxla, gurumAhAtamxyXsathxla, liMgamAhAtamxyXsathxla, jaMgamamAhAtamxyXsathxla, BakatxmAhAtamxyXsathxla, sharaNamAhAtamxyXsathxla, parxsAdamAhAtamxyXsathxla -eMba ELu sathxlagaLu; 4. pArxNaliMgisathxla:- pArxNaliMgisathxla, pArxNaliMgAcaRnAsathxla, shivayoVga samAdhisathxla, liMganijasathxla, aMgaliMgasathxla -eMba aidu sathxlagaLu; 5. sharaNasathxla:- sharaNasathxla, tAmasanirasanasathxla, nideRVshasathxla, shiVlasaMpAdanasathxla -eMba nAlukx sathxlagaLu; 6. aikayxsathxla:- idaralilx aikayxsathxla, savARcArasaMpatitxsathxla, EkaBAjanasathxla, sahaBoVjanasathxla -eMba nAlukx sathxlagaLu ive. liMgasathxlagaLu 57- 1. Bakatxsathxla:- idaralilx diVkASxgurusathxla, shikASxgurusathxla, jAcnxnagurusathxla, kirxyAliMgasathxla, BAvaliMgasathxla, jAcnxnaliMgasathxla, savxyasathxla, carasathxla, parasathxla -eMba oMbatutx sathxlagaLu; 2. mAheVshavxrasathxla:- idaralilx kirxyAgamasathxla, BAvAgamasathxla, jAcnxnAgamasathxla, sakAyasathxla, akAyasathxla, parakAyasathxla, dhamARcArasathxla, BAvAcArasathxla, jAcnxnAcArasathxla -eMba oMbatutx sathxlagaLu; 3. parxsAdisathxla:- idaralilx kAyAnugarxhasathxla, iMdirxyAnugarxhasathxla, pArxNAnugarxhasathxla, kAyApiRtasathxla, karaNApiRtasathxla, BAvApiRtasathxla, shiSayxsathxla, shushUrxSAsathxla, seVvayxsathxla -eMba oMbatutx sathxlagaLu; 4. pArxNaliMgisathxla:- Atamxsathxla, aMtarAtamxsathxla, paramAtamxsathxla, nideRVhAgamasathxla, niBARvAgamasathxla, niSAThxgamasathxla, AdiparxsAdasathxla, aMtayxparxsAdasathxla, seVvayxparxsAdasathxla- eMba oMbatutx sathxlagaLu; 5. sharaNasathxla:- diVkASxpAdoVdaka sathxla, shikASxpAdoVdakasathxla, jAcnxnapAdoVdakasathxla, kirxyAniSapxtitxsathxla, BAvaniSapxtitxsathxla, jAcnxnaniSapxtitxsathxla, piMDAkAshasathxla, biMdAvxkAshasathxla, mahAkAshasathxla, kirxyAparxkAshasathxla, BAvaparxkAshanasathxla, jAcnxnaparxkAshasathxla -eMba hanenxraDu sathxlagaLu; 6. aikayxsathxla:- sivxVkaqta parxsAdeYkayxsathxla, shiSoTxVdanasathxla, carAcaralayasathxla, BAMDasathxla, BAjanasathxla, aMgaleVpanasathxla, savxparAjAcnxsathxla, BAvABAvalayasathxla, jAcnxnashUnayxsathxla-eMba oMbatutx sathxlagaLu idudx oTuTx nUroMdu sathxlagaLAgive:
 %AcAradiMda vicArisi diVkeSxya mADuvudu gurusathxla... EkoVtatxrashatasathxlaveMba BinanxBAvaMgaLanaridu... (savasaM. 8; parxsABoV. 19-11); GaTasAthxvaradoLaganoDedu kicicxna horeya kaMDe... EkoVtatxrashatasathxlavaneVkiVkarisi... (savasaM. 8; bAcikA. 211-85);}}
-\newmeaning{\ullekha{SaTfsathxla muMtAda paMcaviMshatitatatxvX EkoVtatxrashatasathxla muMtAda kirxyAdhamaRMgaLalilx Acarisuvudu pUvaRkakeSxya BeVda (savasaM. 6; avareV. 669-197); maNuNx niVrinaMte AdAgave Bakatxna Bakatxsathxla baMgAra baNaNx AdaMte maheVshavxrana mAheVshavxrasathxla iMtivaroLagAda EkoVtatxrashatasathxla modalAda BAvavU nimamxlilxyeMdu arida matetx adaneVneMdupamisuve (savasaM. 8; moVLimA. 2035-657);  iMtiva\char'273\char'304\char'311\char'261LagAda EkoVtatxrashatasathxla modalAda BAvavU nimamxlilxyeMdu a\char'273\char'236du matetx adaneVneMdupamisuve (savasaM. 8; moVLige. 2032-681); aMgasathxlaMgaLeV nAlavxtatxnAlakxlA liMgasathxlaMgaLeYvatetxVLu kUDalekx mAMgalayxdeVkoVtatxrashatasathxlaM (viVsheYpu. 8-127-8).}}
+\newmeaning{\ullekha{SaTasxthXla muMtAda paMcaviMshatitatatxvX EkoVtatxrashatasathxla muMtAda kirxyAdhamaRMgaLalilx Acarisuvudu pUvaRkakeSxya BeVda. (savasaM. 6; avareV. 669-197); maNuNx niVrinaMte AdAgave Bakatxna Bakatxsathxla. baMgAra baNaNx AdaMte maheVshavxrana mAheVshavxrasathxla iMtivaroLagAda EkoVtatxrashatasathxla modalAda BAvavU nimamxlilxyeMdu arida matetx adaneVneMdupamisuve. (savasaM. 8; moVLimA. 2035-657);  aMgasathxlaMgaLeV nAlavxtatxnAlakxlA liMgasathxlaMgaLeYvatetxVLu kUDalekx mAMgalayxdeVkoVtatxrashatasathxlaM. (viVsheYpu. 8-127-8).}}
 \smallskip
-\newmeaning{\ni{EkoVtatxrashatasathxlaM - EkaM utatxraM yasayx tatf EkoVtatxraM, EkoVtatxraM ca tatf shataM ca  EkoVtatxrashataM, EkoVtatxrashatasayx  EkoVtatxrashatAnAM nA sathxlaM athavA EkaM utatxraM yeVSAM tAni EkoVtatxrANi EkoVtatxrANi ca tAni shatAni  EkoVtatxrashatAni, EkoVtatxrashatAnAM sathxlaM EkoVtatxrashatasathxlaM}}
+\newmeaning{\ni{EkoVtatxrashatasathxlaM - EkaM utatxraM yasayx tatf EkoVtatxraM, EkoVtatxraM ca tatf shataM ca  EkoVtatxrashataM, EkoVtatxrashatasayx  EkoVtatxrashatAnAM vA sathxlaM athavA EkaM utatxraM yeVSAM tAni EkoVtatxrANi EkoVtatxrANi ca tAni shatAni  EkoVtatxrashatAni, EkoVtatxrashatAnAM sathxlaM EkoVtatxrashatasathxlaM}}
 \smallskip
 \newmeaning{\arthanonum{\SEE{sathxla, aMgasathxla, liMgasathxla}}}
 \end{entry}
@@ -7402,28 +7405,28 @@ piMDAdijAcnxnashUnAyxMtameVkoVtatxrashatasathxlamf | (kirx.sA., BA-1, pu. 11)
 \begin{entry}
 \word{EkoVdidxSaTxvidhAna}
 \src{saM}
-\meaning{\arthanonum{maqta vayxkitxya SoVDashArAdhaneya karxmadalilx tatatxvXsaMyoVjaneya parxkirxyeya aMgavAgi EkoVdidxSaTxvidhAnavu barutatxde. tatatxvXsaMyoVjaneya sididhxgoVsakxra EkoVdidhxSaTxvidhAnadaMte Ekavayxkitxyanunx udedxVshisi mADuva anuSAThxna. I bageya ArAdhaneyalilx vishevxVdeVvategaLa AvAhaneyilalx, aBisharxvaNa matutx kiVtaRneyilalx. aMteyeV parxdakiSxNe, visajaRne athavA siVmAMtagamana muMtAda kAyaRgaLAvuvU ilalx. EkoVdidxSaTxvidhAnadiMda ArAdhaneyanunx mADidare
+\meaning{\arthanonum{maqta vayxkitxya SoVDashArAdhaneya karxmadalilx tatatxvXsaMyoVjaneya parxkirxyeya aMgavAgi EkoVdidxSaTx vidhAnavu barutatxde. tatatxvXsaMyoVjaneya sididhxgoVsakxra EkoVdidxSaTx vidhAnadaMte Ekavayxkitxyanunx udedxVshisi mADuva anuSAThxna. I bageya ArAdhaneyalilx vishevxVdeVvategaLa AvAhaneyilalx, aBisharxvaNa matutx kiVtaRneyilalx. aMteyeV parxdakiSxNe, visajaRne athavA siVmAMtagamana muMtAda kAyaRgaLAvuvU ilalx. EkoVdidxSaTx vidhAnadiMda ArAdhaneyanunx mADidare
 maqta vayxkitxge rudarxtavx matutx maheVshatatxvXgaLu pArxpatxvAgutatxve.}}
 \smallskip
 \begin{shl}
-EkoVdidxSaTxvidhAneVna tatatxvXsaMyoVgasidadhxyeV ||\\[1pt]
-kirxyateV yadeVkamudidxshayx ceYkoVdidxSaTxM parxkiVtiRtamf |\\[1pt]
-vishevxV deVvAvAhanaM ca nABisharxvaNakiVtaRnamf ||\\[1pt]
+EkoVdidxSaTxvidhAneVna tatatxvXsaMyoVgasidadhxyeV |\\[1pt]
+kirxyateV yadeVkamudidxshayx ceYkoVdidxSaTxM parxkiVtiRtamf ||\\[1pt]
+vishevxV deVvAvAhanaM ca nABisharxvaNakiVtaRnamf |\\[1pt]
 parxdakiSxNavisageRV vA siVmAMtagamanaM na hi ||\\[1pt]
 ArAdhanaM tataH kAyaRM divayxrUpavataH pituH |\\[1pt]
-EkoVdidxSaTxvidhAneVna rudarxtavxM Bavati dhurxvamf |\\[1pt]
-tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf ||
+EkoVdidxSaTxvidhAneVna rudarxtavxM Bavati dhurxvamf ||\\[1pt]
+tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf |
 \end{shl}
 \medskip
-\pauthor{(caM.A., ti.,ca.pA., 4, 28-29, 15; makuTa, ca.pA., 6.8. 9)}
+\pauthor{(caM.A., ca.pA., 4, 28-29, 15; makuTa, ca.pA., 6.8. 9)}
 \newmeaning{\ni{EkoVdidxSaTxvidhAnaM - EkeVna udidxSaTxM yatf vidhAnaM tatf EkoVdidxSaTxvidhAnaM}}
 \end{entry}
 
 \begin{entry}
 \word{EkoVBAjana}
-\meaning{\arthanonum{(noVDi. EkaBAjana)}}
+\meaning{\arthanonum{(= EkaBAjana)}}
 %\meaning{\arthanonum{Bakatxnu tAnu parashivaniMda Binanxvalalx eMba arivu mUDida  maVle, tAnomemx uNaNxbeVku, liMgakokxmemx uNiNxsabeVku eMba devxYta  BAva hoVgi, tAnu uMDAga paramAtamxnige taqpitxyAgutatxde eMdu  tiLiyutAtxne; EkeMdare avanu tananx deVha, iMdirxya,  karaNAdigaLanunx parashivanige apiRsiruvudariMda (athavA avu  tananxvalalx parashivanavu AdudariMda), tAnu keVvala oMdu  mAdhayxmavAgutAtxne. aMdare, Bakatxna karaNAdigaLa mUlaka parashiva  taqpitxpaTuTxkoLuLxvudariMda, Bakatxnige taqpitxyAguvudu  parashivanigU taqpitxyAguvudariMdaleV. hiVge, oMdeV taTeTxyalilx  (EkaBAjanadalilx) Bakatx matutx parashiva  BoVgisutAtxrenanxbahudu.}
-\newmeaning{\ullekha{haraMgeyU tanageyU EkoVBAjanaveMbaru guruliMga \hbox{baMdare} matotxMdu BAjanava taninxyeMba[rige] liMgavuMTe, \hbox{liMgava} muTiTx hiMguva BavigaLige liMgavuMTe, liMga jaMgamavanu mahAparxsAdavanu Ekava mADidavaMgalalxde EkoVBAjanavilalx kUDalacenanxsaMgamadeVvA (savasaM. 3; cenanxba. 522-161).}} 
+\newmeaning{\ullekha{haraMgeyU tanageyU EkoVBAjanaveMbaru, guruliMga \hbox{baMdare} matotxMdu BAjanava taninxyeMba[rige] liMgavuMTe? \hbox{liMgava} muTiTx hiMguva BavigaLige liMgavuMTe? liMga jaMgamavanu mahAparxsAdavanu Ekava mADidavaMgalalxde. EkoVBAjanavilalx kUDalacenanxsaMgamadeVvA. (savasaM. 3; cenanxba. 522-161).}} 
 \newmeaning{\ni{EkaBAjanaM - EkaM ca tatf BAjanaM ca EkaBAjanaM}}
 \end{entry}
 
@@ -7471,8 +7474,8 @@ tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf ||
 \begin{entry}
 \word{ELavasethx}
 \src{va}
-\meaning{\arthanonum{tamoVguNAvasethx.}
-\ullekha{mUravasethxyalilx toVruvudu satavxguNa Aravasethxyalilx toVruvudu rajoVguNa ELavasethxyalilx toVruvudu tamoVguNa iMtiV tirxvidhAvasethxyalilx toVruvavelalxvU apupxvina saMcAraguNa (savasaM. 7; DakekxboV. 962-292).}}
+\meaning{\arthanonum{= tamoVguNAvasethx.}
+\ullekha{mUravasethxyalilx toVruvudu satavxguNa, Aravasethxyalilx toVruvudu rajoVguNa, ELavasethxyalilx toVruvudu tamoVguNa, iMtiV tirxvidhAvasethxyalilx toVruvuvelalxvU apupxvina saMcAraguNa. (savasaM. 7; Dakekxbo. 962-292).}}
 \end{entry}
 
 %\begin{entry}
@@ -7487,12 +7490,12 @@ tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf ||
  parivAradalilxruvavaru. Adare vacanakAraru BUmiya meVlidadx kelavu
  viVrasheYva saMtaranunx parxmatha gaNagaLa\break maTaTxkekxVrisi, avara
  saMKeyx 770 eMdu nidhaRrisidAdxre. ava\-ralilx
- parxmuKareMdare-uriliMga pedidx, nuliya caMdayayx, haDapada
+ parxmuKareMdare - uriliMga pedidx, nuliya caMdayayx, haDapada
  apapxNaNx, meVdAra keVtayayx, gajeVsha masaNayayx, basavaNaNx,
  cenanxbasavaNaNx, parxBudeVvaru. ivarelalxrU liMgAMga
  sAmarasayx paDedu, jiVvanumxkatxrAgi tamamx kAyavanenxV
  keYlAsavanAnxgi mADikoMDavareMba kAraNakAkxgi avaranunx
- parxmatha\-reMdu karedirabahudu. (va.pa.koV. 101)} \ullekha{sharaNara nilava uriliMga pedadxyayxgaLu, nuliyacaMdayayxgaLu haDapada apapxNaNxgaLu, mAyxdAra keVtayayxgaLu, gajeVsha manacnajnxyigaLu basavaNaNx, cenanxbasavaNaNx, parxBudeVvaru modalAda ELunUrepapxtutx parxmathagaNaMgaLu balalxralalxde, mikikxna BavaBArigaLAda veVdAMti, \hbox{sidAdhxMti} yoVgamAgiRgaLu modalAda BinanxBAva jiVvAtamxretatx balalxrayAyx (savasaM. 10; kADasi. 295-186).}}
+ parxmatha\-reMdu karedirabahudu. (va.pa.koV. 101)} \ullekha{sharaNara nilava uriliMga pedadxyayxgaLu, nuliya caMdayayxgaLu, haDapada apapxNaNxgaLu, mAdAra keVtayayxgaLu, gajeVsha masaNayayxgaLu, basavaNaNx, cenanxbasavaNaNx, parxBudeVvaru modalAda ELunUrepapxtutx parxmathagaNaMgaLu balalxralalxde, mikikxna BavaBArigaLAda veVdAMti, \hbox{sidAdhxMti} yoVgamAgiRgaLu modalAda BinanxBAva jiVvAtamxretatx balalxrayAyx. (savasaM. 10; kADasi. 298-189).}}
 \end{entry}
 %\smallskip
 %\begin{shl}
@@ -7536,12 +7539,16 @@ tatatxvXsaMyoVjaneVneYva maheVshatavxM punaBaRveVtf ||
 % aviBAjayx parashiva kANuvudariMda avanu aikayx. (va.pa.koV. 102)}}
 %\end{entry}
 
+\begin{center}
+{\bf {\LARGE ai}}
+\end{center}
+
 \begin{entry}
 \word{aikayx}
 %\meaning{\arthanonum{shivatatatxvXdalilx beretuhoVguvudu.}}
 %\newmeaning{\arthanonum{liMgAMga sAmarasayxvanunx sAdhisidavanu.}}
 %\newmeaning{\arthanonum{shiva-jiVva eMba uBayaBArxMtiyilalxda sAdhaka. SaTfsathxlagaLalilx koneya sathxla.}}
-\meaning{\artha{shivatatatxvXdalilx beretuhoVguvudu, -oMdAguvudu; liMgAMga sAmarasayx :}}
+\meaning{\artha{shivatatatxvXdalilx oMdAguvudu, shivanalilx oMdAguvudu; liMgAMgasAmarasayx :}}
 \smallskip
 \begin{shl}
 shivajiVvoVBayaBArxMtirahitashecxYkayx ucayxteV |\\[1pt]
@@ -7555,15 +7562,15 @@ sharaNaH shivaliMgeYkayxH SaTfsathxlAni hi pAvaRti ||
 \end{shl}
 \medskip
 \pauthor{(viV.dha.shi., pu. 32)}
-\newmeaning{\ullekha{sharaNasaninxhita aikayxvahalilx haribarxhAmxdigaLu modalAda tetitxVsAdi devakaRLuGeV uGeV enunxtitxralu aikayx basavaNaNxMge ThAvAvudayAyx eMdaDe (savasaM. 1; basava. 845-217); kirxVyalilx maganxvAda baLika aikayxda vicAra beVkilalx guruvina gadudxge \hbox{beVkilalx} (savasaM. 4; sidadhxrA. 368-103).} \artha{Bakatx, \hbox{maheVsha}, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx -eMba moVkaSxsAdhaneya Aru haMtagaLalilx koneya haMtavanunx muTiTxdavanu; liMgAMgasAmarasayxvanunx paDedavanu; shivatatatxvXdalilx beretuhoVdavanu :} \ullekha{BakatxneMteMbenayAyx Baviya saMga biDadananxkakx ...aikayxneMteMbenayAyx jananamaraNavirahitavAgadananxkakx (savasaM. 1; basava. 510-123); dhamaRkamaRcatuviRdhada PalapadamoVkaSx jananamaraNa benanx biDade aikayxreMtAdirayAyx (savasaM. 3; cenanxba. 1477-534); A SaDavxgaRmaM samunanxtaSaDUmeRya duguRNaMgaLaM biTaTxSaTxvidhadacaRneya liMgakaM varxtaBAvaBaritadiM mADutatx ...liMgAMgavoMduta vatiRpAaneYkayxM (viVsheYpu. 8-130-34).}}
+\newmeaning{\ullekha{sharaNasaninxhita aikayxvahalilx haribarxhAmxdigaLu modalAda tetitxVsAdi deVvakaRLuGeV uGeV enunxtitxralu aikayx basavaNaNxMge ThAvAvudayAyx eMdaDe. (savasaM. 1; basava. 845-217); kirxVyalilx maganxvAda baLika aikayxda vicAra beVkilalx, guruvina gadudxge \hbox{beVkilalx} (savasaM. 4; sidadhxrA. 368-103).} \artha{Bakatx, \hbox{maheVsha}, parxsAdi, pArxNaliMgi, sharaNa matutx aikayx - eMba moVkaSxsAdhaneya Aru haMtagaLalilx koneya haMtavanunx muTiTxdavanu; liMgAMga sAmarasayxvanunx paDedavanu; shivatatatxvXdalilx beretuhoVdavanu :} \ullekha{BakatxneMteMbenayAyx? Baviya saMga biDadananxkakx ...aikayxneMteMbenayAyx? jananamaraNavirahitavAgadananxkakx. (savasaM. 1; basava. 510-123); dhamaRkamaRcatuviRdhada PalapadamoVkaSx jananamaraNa benanx biDade aikayxreMtAdirayAyx. (savasaM. 3; cenanxba. 1418-507); A SaDavxgaRmaM samunanxtaSaDUmeRya duguRNaMgaLaM biTaTxSaTxvidhadacaRneya liMgakaM varxtaBAvaBaritadiM mADutatx ...liMgAMgavoMduta vatiRpAtaneYkayxM (viVsheYpu. 8-130-34).}}
 \newmeaning{\ni{aikayxM, Ekasayx BAvaH aikayxM; aikayxH EkatavxM pArxpAtxH yaH saH aikayxH}}
 \end{entry}
 
 \begin{entry}
 \word{aikayxpada}
 \src{va}
-\meaning{\arthanonum{(noVDi. aikayxsathxla)}
-\ullekha{sajajxnavALave tAniniteMbe AlasidaDe harivude ayayx aikayxpadavu (savasaM-4; sidadhxrA. 1065-307); kirxVya nuDivalilx sathxla, sathxlava nuDivalilx AcaraNe, AcaraNe Adharisidalilx jAcnxna, jAcnxnavanAdharisidalilx divayxjAcnxna, divayxjAcnxna Adharisi niMdalilx mahadoDalu adu mahAmaya leVpavAdalilx adu aikayxpada sadoyxVjAtaliMgadalilx (savasaM. 6; avareV. 743-223).}}
+\meaning{\arthanonum{(= aikayxsathxla)}
+\ullekha{sajajxnavALave tAniniteMbe AlasidaDe harivude ayayx aikayxpadavu. (savasaM-4; sidadhxrA. 1065-307); kirxVya nuDivalilx sathxla, sathxlava nuDivalilx AcaraNe, AcaraNe Adharisidalilx jAcnxna, jAcnxnavanAdharisidalilx divayxjAcnxna, divayxjAcnxna Adharisi niMdalilx mahadoDalu adu, mahAmaya leVpavAdalilx adu aikayxpada sadoyxVjAtaliMgadalilx. (savasaM. 6; avareV. 743-223).}}
 \newmeaning{\ni{aikayxpadaM - aikayxsayx padaM aikayxpadaM}}
 \end{entry}
 
